snapshots/syntax/statements/control_flow/jump/label_preserves_whitespace.snap
---
source: src/syntax/statements/control_flow/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: LabelStatement
      children:
        - kind: Identifier
          text: MyLabel
        - kind: ColonOperator
          text: ":"
