snapshots/syntax/statements/control_flow/jump/numeric_line_label_without_colon.snap
---
source: vb6parse/src/syntax/statements/control_flow/jump.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: OnErrorStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: OnKeyword
                  text: "On"
                - kind: Whitespace
                  text: " "
                - kind: ErrorKeyword
                  text: Error
                - kind: Whitespace
                  text: " "
                - kind: GotoKeyword
                  text: GoTo
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "100"
                - kind: Newline
                  text: "\n"
            - kind: ExitStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ExitKeyword
                  text: Exit
                - kind: Whitespace
                  text: " "
                - kind: SubKeyword
                  text: Sub
            - kind: Newline
              text: "\n"
            - kind: LabelStatement
              children:
                - kind: IntegerLiteral
                  text: "100"
                - kind: Whitespace
                  text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: Err
                - kind: PeriodOperator
                  text: "."
                - kind: Identifier
                  text: Raise
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: NumericLiteralExpression
                          children:
                            - kind: IntegerLiteral
                              text: "5"
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
